name:                icicli
version:             0.1.0.0
synopsis:            Icinga 2 terminal client
description:         Please see README.md
homepage:            https://github.com/kuznero/icicli#readme
license:             BSD3
license-file:        LICENSE
author:              Roman Kuznetsov
maintainer:          roman@kuznero.com
copyright:           2017 @ Roman Kuznetsov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

flag debug
  description:        Enable debug support
  manual:             True
  default:            False

library
  hs-source-dirs:      src
  exposed-modules:     Icinga
                       Icinga.REST
                       Icinga.Models.Core
                       Icinga.Models.HostGroup
                       Icinga.Models.HostGroupConfig
                       Icinga.Models.Host
                       Icinga.Models.HostConfig
                       Icinga.Models.ServiceGroup
                       Icinga.Models.ServiceGroupConfig
                       Icinga.Models.Service
                       Icinga.Models.ServiceConfig
                       Icinga.Models.Notification
                       Icinga.Models.NotificationConfig
                       Icinga.Models.ProcessCheckResult
                       Icinga.Models.CheckResult
                       Icinga.Models.Endpoint
                       Icinga.Models.Response
                       Icinga.Models.CreateRequest
                       Icinga.Models.ModifyRequest
  build-depends:       base == 4.9.1.0
                     , bytestring == 0.10.8.1
                     , http-types == 0.9.1
                     , http-conduit == 2.2.3.1
                     , connection == 0.2.8
                     , exceptions == 0.8.3
                     , case-insensitive == 1.2.0.9
                     , aeson == 1.0.2.1
                     , aeson-pretty == 0.8.2
                     , containers == 0.5.7.1
  default-language:    Haskell2010
  if flag(debug)
    cpp-options:    -DDEBUG

executable icicli
  hs-source-dirs:      app
  other-modules:       App
                       CmdArgsParser
                       Helpers
                       Helpers.HostGroupManagement
                       Helpers.HostManagement
                       Helpers.ServiceGroupManagement
                       Helpers.ServiceManagement
                       Helpers.NotificationManagement
                       Helpers.StatusManagement
                       Helpers.Tracing
                       Helpers.Usage
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base == 4.9.1.0
                     , icicli
                     , network == 2.6.3.1
                     , containers == 0.5.7.1
                     , parsec == 3.1.11
                     , mtl == 2.2.1
                     , transformers == 0.5.2.0
  default-language:    Haskell2010
  if flag(debug)
    cpp-options:    -DDEBUG

test-suite icicli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base == 4.9.1.0
                     , icicli
                     , HUnit == 1.5.0.0
                     , aeson == 1.0.2.1
                     , bytestring == 0.10.8.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kuznero/icicli
